[package]
name = "gi_tracer"
version = "0.1.0"
edition = "2021"
default-run = "gi_tracer"

[[bin]]
name = "gi_tracer"

[[bin]]
name = "bunny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
num = "*"
rayon = "*"
indicatif = "*"
serde = {version="*", features=["derive", "rc"]}
serde-binary = "*"
